--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -77,10 +77,24 @@
     <string name="tv_videarthquake">https://youtu.be/BLEPakj1YTY</string>
     <string name="tv_vidflood">https://youtu.be/43M5mZuserHF8</string>
     <string name="tv_firstaidd">प्राथमिक चिकित्सा सूचना</string>
-    <string name="tv_diarrhoea">1. Cholera(Medications):</string>
-    <string name="tv_medchl1">•	Rehydration(for Mild Cases).</string>
-    <string name="tv_medchl2">•	Doxycycline(for Adults in Severe Case).</string>
-    <string name="tv_medchl3">•	Azithromycin(for Children and Pregnant Woman in Severe Case).</string>
+    <string name="tv_diarrhoea">1.हैजा (चिकित्सा):</string>
+    <string name="tv_medchl1">• पुनर्जलीकरण (हल्के मामलों के लिए)।</string>
+    <string name="tv_medchl2">• डोक्सीसाइक्लिन (गंभीर मामले में वयस्कों के लिए)।</string>
+    <string name="tv_medchl3">• एज़िथ्रोमाइसिन (गंभीर मामले में बच्चों और गर्भवती महिला के लिए)।</string>
     <string name="tv_vidlandslide">https://youtu.be/0l3ifBTMTvk</string>
     <string name="tv_pointland_1">• \कभी भी पानी या कीचड़ बहने वाली सड़क को पार न करें। यदि आप एक पुल को कभी नहीं देखते हैं    निकट आना। यह तेजी से और बड़ा हो सकता है ताकि आप बच सकें।</string>
+    <string name="tv_police">पुलिस</string>
+    <string name="tv_fire">अग्निशामक दल</string>
+    <string name="tv_ambu">रोगी वाहन</string>
+    <string name="tv_hospitals">आस-पास की स्वास्थ्य संबंधी प्रणालियाँ</string>
+    <string name="tv_whatsapp">व्हाट्सएप</string>
+    <string name="tv_facebook">फेसबुक</string>
+    <string name="tv_insta">इन्स्ताग्राम</string>
+    <string name="tv_sb1">• सभी सांप के काटने पर, जरूरत पड़ने पर कार्डियोपल्मोनरी रिससिटेशन (सीपीआर) सहित आपातकालीन देखभाल प्रदान करें।</string>
+    <string name="tv_sb2">• काटने के क्षेत्र को धोने से बचें क्योंकि त्वचा पर छोड़े गए किसी भी विष से सांप की पहचान करने में मदद मिल सकती है।</string>
+    <string name="tv_sb3">• एक दबाव स्थिरीकरण पट्टी लागू करें और चिकित्सा सहायता आने तक व्यक्ति को शांत और यथासंभव शांत रखें।</string>
+    <string name="tv_sb">2.साप का काटना (चिकित्सा):</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="tracking_enabled_notif">Tracking is currently enabled.Tap to Cancel</string>
+    <string name="firebase_path">location</string>
 </resources>
