--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,17 @@
     <string name="tv_pointland_1">•\Never cross a road with water or mud flowing. Never cross a bridge if you see a
         flow approaching. It can grow faster and larger too quickly for you to escape.</string>
     <string name="title_activity_maps">Map</string>
+    <string name="tv_police">POLICE</string>
+    <string name="tv_fire">FIRE BRIGADE</string>
+    <string name="tv_ambu">AMBULANCE</string>
+    <string name="tv_hospitals">NEARBY HEALTHCARE SYSTEMS</string>
+    <string name="tv_whatsapp">WHATSAPP</string>
+    <string name="tv_facebook">FACEBOOK</string>
+    <string name="tv_insta">INSTAGRAM</string>
+    <string name="tv_sb1">•	For all snake bites, provide emergency care including cardiopulmonary resuscitation (CPR) if needed.</string>
+    <string name="tv_sb2">•	Avoid washing the bite area because any venom left on the skin can help identify the snake.</string>
+    <string name="tv_sb3">•	Apply a pressure immobilisation bandage and keep the person calm and as still as possible until medical help arrives.</string>
+    <string name="tv_sb">2. Snake Bite (Medications)</string>
 
 
 </resources>
