--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,35 @@
     <string name="tv_sb2">•	Avoid washing the bite area because any venom left on the skin can help identify the snake.</string>
     <string name="tv_sb3">•	Apply a pressure immobilisation bandage and keep the person calm and as still as possible until medical help arrives.</string>
     <string name="tv_sb">2. Snake Bite (Medications)</string>
+    <string name="bleeding">3. Bleeding</string>
+    <string name="point1">1. Cover the wound with a gauze or a cloth.</string>
+    <string name="point2">2. Apply direct pressure to stop the blood flow</string>
+    <string name="point3">3. Don\'t remove the cloth. Add more layers if needed. The cloth will help clots form to stop the flow.</string>
+    <string name="burns">4. Burns</string>
+    <string name="burnp1">1. Flush the burned area with cool running water for several minutes. Do not use ice.</string>
+    <string name="burnp2">2. Apply a light gauze bandage.</string>
+    <string name="burnp3">3. Do not apply ointments, butter, or oily remedies to the burn.</string>
+    <string name="burnp4">4. Take ibuprofen or acetaminophen for pain relief if necessary</string>
+    <string name="blisters">5. Blisters</string>
+    <string name="bp1">1. Use a sterilized needle and make small punctures at the edge of the blister.</string>
+    <string name="bp2">2. Express the fluid.</string>
+    <string name="bp3">3. Then apply antibiotic ointment.</string>
+    <string name="bp4">4. Cover it to protect it from further rubbing and pressure.</string>
+    <string name="Fractures">6. Fractures</string>
+    <string name="fra1">1.Don\'t try to straighten it.</string>
+    <string name="fra2">2. Stabilize the limb using a splint and padding to keep it immobile.</string>
+    <string name="fra3">3. Put a cold pack on the injury, avoiding placing ice directly on the skin.</string>
+    <string name="fra4">4. Elevate the extremity.</string>
+    <string name="nosebleed">7. Nosebleed</string>
+    <string name="n1">1. Lean slightly forward, not back.</string>
+    <string name="n2">2. Pinch the nose just below the bridge. Don\'t pinch the nostrils closed by pinching lower.</string>
+    <string name="n3">3. Check after five minutes to see if bleeding has stopped. If not, continue pinching and check after another 10 minutes.</string>
+    <string name="n4">4. You can also apply a cold pack to the bridge of the nose while pinching.</string>
+    <string name="BeeStings">8 Bee Stings</string>
+    <string name="b1">1. Get the stinger out any way you can to prevent more venom being delivered. It\'s a myth that any particular way is better or worse.</string>
+    <string name="b2">2. If the person is known to be allergic to bee stings, use an EpiPen to prevent anaphylaxis or call 911 if none is available.</string>
+    <string name="b3">"3. Use a cold pack to reduce swelling at the site, but take care not to cause frostbite. "</string>
+    <string name="b4">"4. Use an antihistamine like Benadryl (diphenhydramine) to reduce swelling and itching. "</string>
 
 
 </resources>
