--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,9 @@
     <string name="tv_sb2">•	Avoid washing the bite area because any venom left on the skin can help identify the snake.</string>
     <string name="tv_sb3">•	Apply a pressure immobilisation bandage and keep the person calm and as still as possible until medical help arrives.</string>
     <string name="tv_sb">2. Snake Bite (Medications)</string>
+    <string name="player_error">Error initializing YouTube player: %s</string>
+    <string name="seek_to">Jump To</string>
+    <string name="seek_to_hint">Seconds</string>
 
 
 </resources>
