--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,9 @@
     <string name="player_error">Error initializing YouTube player: %s</string>
     <string name="seek_to">Jump To</string>
     <string name="seek_to_hint">Seconds</string>
-
+    <string name="police_station">POLICE STATION</string>
+    <string name="hospitals">HOSPITALS</string>
+    <string name="nearby_police_station">NEARBY POLICE STATION</string>
 
 
 </resources>
